--- a/47new.html
+++ b/47new.html
@@ -1,76 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snake Game</title>
-<style>
-    body {
-        background-color: black;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-    }
-
-    #container {
-        width: 400px;
-        height: 400px;
-        border: 2px solid white;
-    }
-
-    #snake {
-        width: 20px;
-        height: 20px;
-        background-color: green;
-        position: absolute;
-    }
-
-    #food {
-        width: 20px;
-        height: 20px;
-        background-color: red;
-        position: absolute;
-    }
-</style>
+    <title>Snake Game</title>
+    <style>
+        #game-board {
+            width: 400px;
+            height: 400px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
-<div id="container"></div>
+
+<div id="game-board"></div>
 
 <script>
-    const container = document.getElementById('container');
-    const snake = document.createElement('div');
-    const food = document.createElement('div');
+    const gameBoard = document.getElementById('game-board');
+    const boardSize = 20;
+    const cellSize = 20;
+    let snake = [{ x: 10, y: 10 }];
+    let direction = 'right';
 
-    container.appendChild(snake);
-    container.appendChild(food);
+    function drawSnake() {
+        gameBoard.innerHTML = '';
+        snake.forEach(segment => {
+            const snakeElement = document.createElement('div');
+            snakeElement.style.gridRowStart = segment.y;
+            snakeElement.style.gridColumnStart = segment.x;
+            snakeElement.classList.add('snake');
+            gameBoard.appendChild(snakeElement);
+        });
+    }
 
-    let snakeX = 0;
-    let snakeY = 0;
-    let foodX = 0;
-    let foodY = 0;
-
-    snake.style.left = snakeX + 'px';
-    snake.style.top = snakeY + 'px';
-
-    food.style.left = foodX + 'px';
-    food.style.top = foodY + 'px';
-
-    document.addEventListener('keydown', function(event) {
-        if (event.key === 'ArrowRight') {
-            snakeX += 20;
-        } else if (event.key === 'ArrowLeft') {
-            snakeX -= 20;
-        } else if (event.key === 'ArrowDown') {
-            snakeY += 20;
-        } else if (event.key === 'ArrowUp') {
-            snakeY -= 20;
+    function updateSnake() {
+        const head = { x: snake[0].x, y: snake[0].y };
+        switch (direction) {
+            case 'up':
+                head.y--;
+                break;
+            case 'down':
+                head.y++;
+                break;
+            case 'left':
+                head.x--;
+                break;
+            case 'right':
+                head.x++;
+                break;
         }
+        snake.unshift(head);
+        snake.pop();
+    }
 
-        snake.style.left = snakeX + 'px';
-        snake.style.top = snakeY + 'px';
+    function gameLoop() {
+        updateSnake();
+        drawSnake();
+    }
+
+    document.addEventListener('keydown', event => {
+        switch (event.key) {
+            case 'ArrowUp':
+                direction = 'up';
+                break;
+            case 'ArrowDown':
+                direction = 'down';
+                break;
+            case 'ArrowLeft':
+                direction = 'left';
+                break;
+            case 'ArrowRight':
+                direction = 'right';
+                break;
+        }
     });
+
+    setInterval(gameLoop, 100);
+
 </script>
 </body>
 </html>
