--- a/47new.html
+++ b/47new.html
@@ -4,9 +4,18 @@
     <title>Snake Game</title>
     <style>
         #game-board {
-            width: 400px;
-            height: 400px;
+            display: grid;
+            grid-template-columns: repeat(20, 20px);
+            grid-template-rows: repeat(20, 20px);
             border: 1px solid black;
+        }
+
+        .snake {
+            background-color: green;
+        }
+
+        .food {
+            background-color: red;
         }
     </style>
 </head>
@@ -20,16 +29,25 @@
     const cellSize = 20;
     let snake = [{ x: 10, y: 10 }];
     let direction = 'right';
+    let food = { x: 5, y: 5 };
 
     function drawSnake() {
         gameBoard.innerHTML = '';
         snake.forEach(segment => {
             const snakeElement = document.createElement('div');
-            snakeElement.style.gridRowStart = segment.y;
-            snakeElement.style.gridColumnStart = segment.x;
+            snakeElement.style.gridColumn = segment.x;
+            snakeElement.style.gridRow = segment.y;
             snakeElement.classList.add('snake');
             gameBoard.appendChild(snakeElement);
         });
+    }
+
+    function drawFood() {
+        const foodElement = document.createElement('div');
+        foodElement.style.gridColumn = food.x;
+        foodElement.style.gridRow = food.y;
+        foodElement.classList.add('food');
+        gameBoard.appendChild(foodElement);
     }
 
     function updateSnake() {
@@ -49,12 +67,19 @@
                 break;
         }
         snake.unshift(head);
-        snake.pop();
+
+        if (head.x === food.x && head.y === food.y) {
+            food.x = Math.floor(Math.random() * boardSize) + 1;
+            food.y = Math.floor(Math.random() * boardSize) + 1;
+        } else {
+            snake.pop();
+        }
     }
 
     function gameLoop() {
         updateSnake();
         drawSnake();
+        drawFood();
     }
 
     document.addEventListener('keydown', event => {
