💑🏂 Checkpoint ./10new.html:60785523/152 ./11new.html:60785523/152 ./12new.html:60785523/152 ./13new.html:60785523/152 ./14new.html:60785523/152 ./15new.html:60785523/152 ./16new.html:60785523/152 ./17new.html:60785523/152 ./18new.html:60785523/152 ./19new.html:60785523/152 ./20new.html:60785523/222 ./index.html:60785523/152 ./new.html:60785523/152 ./9new.html:60785523/154 ./8new.html:60785523/152 ./7new.html:60785523/152 ./6new.html:60785523/152 ./5new.html:60785523/152 ./4new.html:60785523/152 ./49new.html:60785523/152 ./48new.html:60785523/152 ./47new.html:60785523/152 ./46new.html:60785523/152 ./45new.html:60785523/152 ./43new.html:60785523/152 ./42new.html:60785523/152 ./41new.html:60785523/152 ./40new.html:60785523/152 ./39new.html:60785523/152 ./3new.html:60785523/152 ./38new.html:60785523/152 ./37new.html:60785523/152 ./36new.html:60785523/152 ./35new.html:60785523/152 ./34new.html:60785523/152 ./33new.html:60785523/152 ./32new.html:60785523/152 ./31new.html:60785523/152 ./30new.html:60785523/69 ./2index.html:60785523/69 ./29new.html:60785523/69 ./28new.html:60785523/69 ./27new.html:60785523/69 ./26.html:60785523/69 ./25new.html:60785523/69 ./24new.html:60785523/69 ./22new.html:60785523/69 ./21new.html:60785523/69

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7341990744589507"
+     crossorigin="anonymous"></script>
   <a href="2index.html"><img src="https://cdn.glitch.global/11f9dfc7-d7fd-4bac-80b7-da22c6e5b44e/Screenshot%202024-04-17%208.09.29%20AM.png?v=1713359420828" alt="Girl in a jacket">
