--- a/12new.html
+++ b/12new.html
@@ -1,4 +1,5 @@
-<!--Start of Tawk.to Script-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7341990744589507"
+     crossorigin="anonymous"></script><!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
