--- a/18new.html
+++ b/18new.html
@@ -1,2 +1,3 @@
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7341990744589507"
+     crossorigin="anonymous"></script>
 <iframe allowfullscreen src="https://private-chatroom.glitch.me/"style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
