--- a/30new.html
+++ b/30new.html
@@ -1,3 +1,4 @@
+     crossorigin="anonymous"></script><!--Start of Tawk.to Script-->
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
