--- a/47new.html
+++ b/47new.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7341990744589507"
+     crossorigin="anonymous"></script><!DOCTYPE html>
 <html>
 <head>
     <title>Snake Game</title>
