🌂🌃 Checkpoint ./2index.html:60785523/486 ./index.html:60785523/366 ./47new.html:60785523/1016

--- a/47new.html
+++ b/47new.html
@@ -1,7 +1,8 @@
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7341990744589507"
-     crossorigin="anonymous"></script><!DOCTYPE html>
+
+  <!DOCTYPE html>
 <html>
 <head>
+
     <title>Snake Game</title>
     <style>
         #game-board {
