--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7341990744589507"
-     crossorigin="anonymous"></script>
+     crossorigin="anonymous"></script><!--Start of Tawk.to Script-->
+<script type="text/javascript">
   <a href="2index.html"><img src="https://cdn.glitch.global/11f9dfc7-d7fd-4bac-80b7-da22c6e5b44e/Screenshot%202024-04-17%208.09.29%20AM.png?v=1713359420828" alt="Girl in a jacket">
