💨🏦 Checkpoint ./2index.html:60785523/102

--- a/2index.html
+++ b/2index.html
@@ -18,7 +18,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
     <body>
-  <h1><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/Screenshot%202023-10-26%209.57.28%20AM.png?v=1698332272683" alt="Clever" width="100" height="100">Clever<p>   Games are not made by me
+  <h1><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/Screenshot%202023-10-26%209.57.28%20AM.png?v=1698332272683" alt="Clever" width="100" height="100">Clever<p><iframe width="275" height="141" src="https://w2.countingdownto.com/5527710" frameborder="0"></iframe>   Games are not made by me
      Proxy Not  working. <a href="https://rammerpro.glitch.me/">Proxy
 </h1>
     <img src="h" alt="GORRILA TAG" width="250" height="200">
