--- a/10new.html
+++ b/10new.html
@@ -1,18 +1,5 @@
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7341990744589507"
-     crossorigin="anonymous"></script><!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6556282291e5c13bb5b06822/1hfc8phor';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script--><h1>
-  <a href="https://classroom.google.com/">Panic</a>
+
+<h1> <a href="https://classroom.google.com/">Panic</a>
 </h1>
 <embed type="image/jpg" src="https://media.licdn.com/dms/image/C5103AQFCt6pvgPtJJw/profile-displayphoto-shrink_800_800/0/1517066053842?e=2147483647&v=beta&t=uMB_Cg-iIj_znZbZyQzStc5eA5jOIPVuY4BB5eEyZ5E" width="5" height="5">
     <iframe allowfullscreen src="https://arkas.glitch.me/madalin-cars-multiplayer/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
