🍣🛫 Checkpoint ./new.html:60785523/44 ./style.css:60785523/1535 ./.glitch-assets:60785523/491 ./index.html:60785523/51 ./2index.html:60785523/41

--- a/new.html
+++ b/new.html
@@ -1,2 +1,2 @@
-
+<link rel="stylesheet" href="style.css">
 <!--End of Tawk.to Script--><embed type="text/html" src="https://deepai.org/chat" width="1200" height="750">
