--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    
   </head>
   <body>
-    <button class="button1" onclick="openGame()"><img src="https://cdn.glitch.global/11f9dfc7-d7fd-4bac-80b7-da22c6e5b44e/Screenshot%202024-04-17%208.09.29%20AM.png?v=1713359420828" alt="Girl in a jacket"></button>
+    <button class="button1" onclick="openGame()"><img src="" alt="Girl in a jacket"></button>
   <script>
     function openGame() {
     var win = window.open()
