--- a/2index.html
+++ b/2index.html
@@ -3,11 +3,11 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <button class="button1" onclick="openGame()">Open Browser</button>
+    <button class="button1" onclick="openGame()"><img src="https://cdn.glitch.global/11f9dfc7-d7fd-4bac-80b7-da22c6e5b44e/Screenshot%202024-04-17%208.09.29%20AM.png?v=1713359420828" alt="CleverREBOOTED" width="100%" height="100%"></button>
   <script>
     function openGame() {
     var win = window.open()
-    var url = "https://rh.lhost.dev/"
+    var url = "3index.html"
     var iframe = win.document.createElement('iframe')
     iframe.style.width = "100%";
     iframe.style.height = "100%";
