📖⛰ Checkpoint ./2index.html:60785523/43

--- a/2index.html
+++ b/2index.html
@@ -7,7 +7,7 @@
   <script>
     function openGame() {
     var win = window.open()
-    var url = "3index.html"
+    var url = "https://hfjfjhfjhjdvfj-svdhsvfvd.glitch.me/3index.html"
     var iframe = win.document.createElement('iframe')
     iframe.style.width = "100%";
     iframe.style.height = "100%";
