--- a/22new.html
+++ b/22new.html
@@ -2,9 +2,7 @@
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-    <iframe allowfullscreen src="https://dreadheadparkour.github.io/go/retro-bowl.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+    <iframe allowfullscreen src="https://parkourrace.github.io/go/retro-bowl.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
 <button id="fullscreenButton" onclick="openFullscreen()">Open Fullscreen</button>
-function openFullscreen() {
-  var embedLink = "https://dreadheadparkour.github.io/go/retro-bowl.html";
-  var fullscreenWindow = window.open(embedLink, "_blank", "fullscreen=yes");
+
 }
