--- a/24new.html
+++ b/24new.html
@@ -3,4 +3,4 @@
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-    <iframe allowfullscreen src="https://parkourrace.github.io.github.io/go/drive-mad.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+    <iframe allowfullscreen src="https://parkourrace.github.io.github.io/play/drive-mad.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
