--- a/27new.html
+++ b/27new.html
@@ -2,4 +2,4 @@
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-    <iframe allowfullscreen src="https://parkourrace.github.io/go/monster-tracks.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe><!--Start of Tawk.to Script-->
+    <iframe allowfullscreen src="https://parkourrace.github.io/play/monster-tracks.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe><!--Start of Tawk.to Script-->
