--- a/30new.html
+++ b/30new.html
@@ -3,4 +3,4 @@
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-    <iframe allowfullscreen src="parkourrace.github.io/go/jelly-truck.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe><!--Start of Tawk.to Script-->
+    <iframe allowfullscreen src="parkourrace.github.io/play/jelly-truck.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe><!--Start of Tawk.to Script-->
