--- a/31new.html
+++ b/31new.html
@@ -3,4 +3,4 @@
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-<iframe allowfullscreen src="https://parkourrace.github.io/go/4th-and-goal-2022.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://parkourrace.github.io/play/4th-and-goal-2022.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
