--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<iframe allowfullscreen src="https://rustic-cactus-saturn.glitch.me/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<html>
+  <head>
+    <link rel="stylesheet" href="index.css">
+  </head>
+  <body>
+    <button class="button1" onclick="openGame()"><img src="https://cdn.glitch.global/11f9dfc7-d7fd-4bac-80b7-da22c6e5b44e/Screenshot%202024-04-17%208.09.29%20AM.png?v=1713359420828" alt="CleverREBOOTED" width="100%" height="100%"></button>
+  <script>
+    function openGame() {
+    var win = window.open()
+    var url = "https://hfjfjhfjhjdvfj-svdhsvfvd.glitch.me/2index.html"
+    var iframe = win.document.createElement('iframe')
+    iframe.style.width = "100%";
+    iframe.style.height = "100%";
+    iframe.src = url
+    win.document.body.appendChild(iframe)
+    }
+  </script>
+  </body>
+</html>
