🐓🕋 Checkpoint ./style.css:60785523/1971 ./2index.html:60785523/157

--- a/2index.html
+++ b/2index.html
@@ -7,6 +7,10 @@
   </head>     
     <body>
 
+     <div class="background"></div> <!-- Background Image -->
+    <img src="your-animation.gif" alt="Overlay GIF" class="gif-overlay"> <!--   
+      
+      
   <h1><img src="https://cdn.glitch.global/11f9dfc7-d7fd-4bac-80b7-da22c6e5b44e/canvas.png?v=1726065594437" alt="CleverREBOOTED" width="250" height="250"></h1><p>
     <h2><a href="https://false-olivine-journey.glitch.me/">Proxy</a><p1> Games not made by me!</p1> </h2>
     <img src="h" alt="Gorilla Tag " width="250" height="200">
