--- a/16new.html
+++ b/16new.html
@@ -1,3 +1,3 @@
 
  
-<iframe allowfullscreen src="https://deepai.org/machine-learning-model/text2img" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>   
+<iframe allowfullscreen src="https://www.humanizeai.io/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>   
