--- a/52new.html
+++ b/52new.html
@@ -1,1 +1,1 @@
-<iframe src='https://www.miniplay.com/embed/hobo-prison-brawl' style='width:100%;height:100%;' frameborder='0' allowfullscreen></iframe>
+l<iframe allowfullscreen src="https://www.playingfungames.com/game/hobo-prison-braw" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
