--- a/50new.html
+++ b/50new.html
@@ -1,1 +1,1 @@
-<iframe allowfullscreen src="https://happy-wheels.co/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://oc-fatih.github.io/g/happy-wheels" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
