--- a/52new.html
+++ b/52new.html
@@ -1,1 +1,1 @@
-l<iframe allowfullscreen src="https://www.playingfungames.com/game/hobo-prison-braw" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://www.playingfungames.com/game/hobo-prison-brawl" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
