💪🛰 Checkpoint ./2index.html:60785523/1171 ./54new.html:60785523/351

--- a/2index.html
+++ b/2index.html
@@ -118,7 +118,9 @@
             <img src="h" alt="Hobo Prison Brawl" width="250" height="200">
 <a href="52new.html"><img src="https://cdn2.steamgriddb.com/icon_thumb/75883741f77a612cdff0a828f94792d1.png" alt="Chat Gpt" width="100" height="100"></a>
        <img src="h" alt="Abobo's Big Adventure" width="250" height="200">
-<a href="53new.html"><img src="https://cdn2.steamgriddb.com/icon_thumb/75883741f77a612cdff0a828f94792d1.png" alt="Chat Gpt" width="100" height="100"></a>
+<a href="53new.html"><img src="https://m.media-amazon.com/images/M/MV5BNTk2NDhlNWMtYjUzZS00MmE5LTlmNmItODQ2MTJjMGM0ZDZlXkEyXkFqcGc@._V1_.jpg" alt="Chat Gpt" width="100" height="100"></a>
+          <img src="h" alt="60 Second Burger Run" width="250" height="200">
+<a href="54new.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7SeUNmMoz2FBiU9VSKJMnZhPSz0yn88LRyA&s" alt="Chat Gpt" width="100" height="100"></a>
  
           </body>
     
