--- a/2index.html
+++ b/2index.html
@@ -121,6 +121,8 @@
 <a href="53new.html"><img src="https://m.media-amazon.com/images/M/MV5BNTk2NDhlNWMtYjUzZS00MmE5LTlmNmItODQ2MTJjMGM0ZDZlXkEyXkFqcGc@._V1_.jpg" alt="Chat Gpt" width="100" height="100"></a>
           <img src="h" alt="60 Second Burger Run" width="250" height="200">
 <a href="54new.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7SeUNmMoz2FBiU9VSKJMnZhPSz0yn88LRyA&s" alt="Chat Gpt" width="100" height="100"></a>
+          <img src="h" alt="CoolScienceGames" width="250" height="200">
+<a href="55new.html"><img src="https://coolsciencegamesubg.github.io/title.png" alt="Chat Gpt" width="100" height="100"></a>
  
           </body>
     
