--- a/51new.html
+++ b/51new.html
@@ -1,1 +1,4 @@
-<iframe allowfullscreen src="https://www.tynker.com/community/projects/play/cookie-clicker-v0-9-1/5e3d977cd3c938510007e40b/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+
+
+<iframe allowfullscreen src="https://coolsciencegamesubg.github.io/games/cookie-clicker.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+  
