📚👣 Checkpoint ./2index.html:60785523/34

--- a/2index.html
+++ b/2index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     Test Failed working on solution
+  Expected fixed date 1/24/2025
 
     <script src="script.js"></script>
 </body>
