🍍👐 Checkpoint ./56new.html:60785523/1139 ./3index.html:60785523/105 ./2index.html:60785523/1

--- a/3index.html
+++ b/3index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="#games" class="button">Games</a>
-        <a href="#proxy" class="button">Proxy</a>
-        <a href="#about" class="button">About</a>
-        <a href="#feedback" class="button">Feedback</a>
+        <a href="2index.html" class="button">Games</a>
+        <a href="https://slow-graceful-iridium.glitch.me/" class="button">Proxy</a>
+        <a href="#57new.html" class="button">About</a>
+        <a href="12new.html" class="button">Feedback</a>
         <a href="56new.html" class="button">Settings</a> <!-- Added the Settings button -->
     </div>
 
