--- a/2index.html
+++ b/2index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 
   </head>     
     <body>
