--- a/56new.html
+++ b/56new.html
@@ -10,7 +10,8 @@
     <div class="content">
         <h1>Settings Page</h1>
         <p>Click the button below to go to the regular link.</p>
-        <a href="https://pertandingan.glitch.me/3index.html" class="button">Regular Link</a> <!-- Regular link button -->
+        <a href="https://pertandingan.glitch.me/3index.html" class="button" target="_blank" rel="noopener noreferrer">Regular Link</a>
+        <!-- Setting target="_blank" to open in a new tab -->
     </div>
 </body>
 </html>
