🌈💸 Checkpoint ./57new.html:60785523/12473 ./2index.html:60785523/1 ./3index.html:60785523/1 ./style3.css:60785523/2033

--- a/3index.html
+++ b/3index.html
@@ -10,7 +10,7 @@
     <div class="navbar">
         <a href="2index.html" class="button">Games</a>
         <a href="https://slow-graceful-iridium.glitch.me/" class="button">Proxy</a>
-        <a href="#57new.html" class="button">About</a>
+        <a href="57new.html" class="button">About</a>
         <a href="12new.html" class="button">Feedback</a>
         <a href="56new.html" class="button">Settings</a> <!-- Added the Settings button -->
     </div>
