--- a/2index.html
+++ b/2index.html
@@ -2,9 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style3.css">
 
-  </head>     
+  </head> 
+      <div class="navbar">
+        <a href="2index.html" class="button">Games</a>
+        <a href="https://slow-graceful-iridium.glitch.me/" class="button">Proxy</a>
+        <a href="57new.html" class="button">About</a>
+        <a href="12new.html" class="button">Feedback</a>
+        <a href="56new.html" class="button">Settings</a> <!-- Added the Settings button -->
+        <a href="3index.html" class="button">HomePage</a> <!-- New HomePage button -->
+    </div>
     <body>
       
         <h1> <h1><img src="https://cdn.glitch.global/11f9dfc7-d7fd-4bac-80b7-da22c6e5b44e/canvas.png?v=1726065594437" alt="CleverREBOOTED" width="250" height="250"></h1><p>
