🌧💝 Checkpoint ./2index.html:60785523/432 ./style3.css:60785523/758 ./56new.html:60785523/411 ./57new.html:60785523/403 ./.glitch-assets:60785523/376

--- a/56new.html
+++ b/56new.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="style3.css"> <!-- Link to your CSS file -->
 </head>
 <body>
+  <div class="navbar">
+        <a href="2index.html" class="button">Games</a>
+        <a href="https://slow-graceful-iridium.glitch.me/" class="button">Proxy</a>
+        <a href="12new.html" class="button">Feedback</a>
+        <a href="56new.html" class="button">Settings</a> <!-- Added the Settings button -->
+        <a href="3index.html" class="button">HomePage</a> <!-- New HomePage button -->
+    </div>
     <div class="content">
         <h1>Settings Page</h1>
         <p>Click the button below to go to the regular link.</p>
