--- a/43new.html
+++ b/43new.html
@@ -3,4 +3,4 @@
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-<iframe allowfullscreen src="https://neal.fun/infinite-craft/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://infinite-craft.org/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
