🍍🗺 Checkpoint ./3index.html:60785523/50 ./57new.html:60785523/50 ./58new.html:60785523/1612 ./2index.html:60785523/201

--- a/57new.html
+++ b/57new.html
@@ -11,7 +11,7 @@
 <body>
     <div class="navbar">
         <a href="2index.html" class="button">Games</a>
-        <a href="https://slow-graceful-iridium.glitch.me/" class="button">Proxy</a>
+        <a href="58new.html" class="button">Proxy</a>
         <a href="12new.html" class="button">Feedback</a>
         <a href="56new.html" class="button">Settings</a> <!-- Added the Settings button -->
         <a href="3index.html" class="button">HomePage</a> <!-- New HomePage button -->
