--- a/3index.html
+++ b/3index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="navbar">
         <a href="2index.html" class="button">Games</a>
-        <a href="https://slow-graceful-iridium.glitch.me/" class="button">Proxy</a>
+        <a href="58new.html" class="button">Proxy</a>
         <a href="57new.html" class="button">About</a>
         <a href="12new.html" class="button">Feedback</a>
         <a href="56new.html" class="button">Settings</a> <!-- Added the Settings button -->
