--- a/2index.html
+++ b/2index.html
@@ -8,6 +8,7 @@
       <div class="navbar">
         <a href="2index.html" class="button">Games</a>
         <a href="58new.html" class="button">Proxy</a>
+        <a href="https://classroom.google.com/" class="button">PANIC!</a>
         <a href="57new.html" class="button">About</a>
         <a href="12new.html" class="button">Feedback</a>
         <a href="56new.html" class="button">Settings</a> <!-- Added the Settings button -->
