--- a/58new.html
+++ b/58new.html
@@ -9,7 +9,7 @@
 <body>
   <div class="navbar">
         <a href="2index.html" class="button">Games</a>
-        
+        <a href="https://classroom.google.com/" class="button">PANIC!</a>
         <a href="12new.html" class="button">Feedback</a>
         <a href="56new.html" class="button">Settings</a> <!-- Added the Settings button -->
         <a href="3index.html" class="button">HomePage</a> <!-- New HomePage button -->
