👞💍 Checkpoint ./57new.html:60785523/253 ./56new.html:60785523/244

--- a/56new.html
+++ b/56new.html
@@ -19,6 +19,8 @@
         <h1>Settings Page</h1>
         <p>Click the button below to go to the regular link.</p>
         <a href="https://pertandingan.glitch.me/3index.html" class="button" target="_blank" rel="noopener noreferrer">Regular Link</a>
+        <p>Click the button below to go into about blank mode.</p>
+        <a href="https://pertandingan.glitch.me/3index.html" class="button" target="_blank" rel="noopener noreferrer">Regular Link</a>
         <!-- Setting target="_blank" to open in a new tab -->
     </div>
 </body>
