🚿🌓 Checkpoint ./56new.html:60785523/12

--- a/56new.html
+++ b/56new.html
@@ -20,7 +20,7 @@
         <p>Click the button below to go to the regular link.</p>
         <a href="https://pertandingan.glitch.me/3index.html" class="button" target="_blank" rel="noopener noreferrer">Regular Link</a>
         <p>Click the button below to go into about blank mode.</p>
-        <a href="https://pertandingan.glitch.me/3index.html" class="button" target="_blank" rel="noopener noreferrer">Regular Link</a>
+        <a href="https://pertandingan.glitch.me/3index.html" class="button" target="_blank" rel="noopener noreferrer"></a>
         <!-- Setting target="_blank" to open in a new tab -->
     </div>
 </body>
