--- a/56new.html
+++ b/56new.html
@@ -20,8 +20,33 @@
         <p>Click the button below to go to the regular link.</p>
         <a href="https://pertandingan.glitch.me/3index.html" class="button" target="_blank" rel="noopener noreferrer">Regular Link</a>
         <p>Click the button below to go into about blank mode.</p>
-        <a href="https://pertandingan.glitch.me/3index.html" class="button" target="_blank" rel="noopener noreferrer"></a>
+        <a href="https://leeward-quickest-cactus.glitch.me" class="button" target="_blank" rel="noopener noreferrer">About Blank</a>
         <!-- Setting target="_blank" to open in a new tab -->
+          <div class="container">
+        <h1>Game Settings</h1>
+        <form id="settingsForm">
+            <div class="setting">
+                <label for="theme">Theme:</label>
+                <select id="theme" name="theme">
+                    <option value="light">Light</option>
+                    <option value="dark">Dark</option>
+                </select>
+            </div>
+            <div class="setting">
+                <label for="sound">Sound Effects:</label>
+                <input type="checkbox" id="sound" name="sound" checked>
+                <span>Enable Sound</span>
+            </div>
+            <div class="setting">
+                <label for="music">Background Music:</label>
+                <input type="checkbox" id="music" name="music">
+                <span>Enable Music</span>
+            </div>
+            <button type="submit">Save Settings</button>
+        </form>
+    </div>
+
+    <script src="script.js"></script>
     </div>
 </body>
 </html>
