--- a/12new.html
+++ b/12new.html
@@ -1,6 +1,9 @@
+<link rel="stylesheet" href="style3.css"> 
+<div class="content">
+        <h1>FeedBack Page</h1>
+        <p>Click one of the buttons below to go to one of the FeedBacks.</p>
+        <a href="https://forms.gle/7p6T6uD71W33Q4xw5" class="button" target="_blank" rel="noopener noreferrer">Public Link</a>
+         <a href="https://forms.gle/6LW9W5rYWEDAp2LG9" class="button" target="_blank" rel="noopener noreferrer">Private Link</a>
+        <!-- Setting target="_blank" to open in a new tab -->
+    </div>
 
-<!--End of Tawk.to Script--><h1>
-  <a href="https://classroom.google.com/">Panic</a>
-</h1>
-
- <iframe allowfullscreen src="https://forms.gle/6LW9W5rYWEDAp2LG9" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>   
