--- a/2index.html
+++ b/2index.html
@@ -132,6 +132,9 @@
 <a href="54new.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7SeUNmMoz2FBiU9VSKJMnZhPSz0yn88LRyA&s" alt="Chat Gpt" width="100" height="100"></a>
           <img src="h" alt="CoolScienceGames" width="250" height="200">
 <a href="55new.html"><img src="https://coolsciencegamesubg.github.io/title.png" alt="Chat Gpt" width="100" height="100"></a>
+       <img src="h" alt="Chess" width="250" height="200">
+<a href="59new.html"><img src="https://images.chesscomfiles.com/uploads/v1/images_users/tiny_mce/CHESScom/phphK5JVu.png" alt="Chat Gpt" width="100" height="100"></a>
+ 
  
           </body>
     
