--- a/3index.html
+++ b/3index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style2.css"> <!-- Link to your CSS file -->
 </head>
 <body>
+      <script>
+        document.addEventListener("keydown", function(event) {
+            // Check if the pressed key is "S"
+            if (event.key === "S" || event.key === "s") {
+                // Redirects to 61new.html
+                window.location.href = '61new.html';
+            }
+        });
+    </script>
+
     <div class="navbar">
         <a href="2index.html" class="button">Games</a>
         <a href="58new.html" class="button">Proxy</a>
