--- a/12new.html
+++ b/12new.html
@@ -1,3 +1,10 @@
+<div class="navbar">
+        <a href="2index.html" class="button">Games</a>
+         <a href="58new.html" class="button">Proxy</a>
+        <a href="https://classroom.google.com/" class="button">PANIC!</a>
+        <a href="56new.html" class="button">Settings</a> <!-- Added the Settings button -->
+        <a href="3index.html" class="button">HomePage</a> <!-- New HomePage button -->
+    </div>
 <link rel="stylesheet" href="style3.css"> 
 <div class="content">
         <h1>FeedBack Page</h1>
