--- a/61new.html
+++ b/61new.html
@@ -1,9 +1,1 @@
-<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-    <iframe 
-        src="https://open.spotify.com/embed/playlist/1JMAuEuHwYtjuKcQfxZgKn" 
-        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-        frameborder="0" 
-        allowtransparency="true" 
-        allow="encrypted-media">
-    </iframe>
-</div>
+<iframe allowfullscreen src="https://fnaf-2.github.io/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
