--- a/64new.html
+++ b/64new.html
@@ -1,1 +1,1 @@
-<iframe allowfullscreen src="https://www.retrogames.cc/segacd-games/sonic-cd.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://retrogamesonline.io/sonic-cd" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
