--- a/62new.html
+++ b/62new.html
@@ -1,1 +1,1 @@
-<iframe allowfullscreen src="https://oldgameshelf.com/games/sega-genesis/sonic-3-complete-sega-genesis-8205" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://s3unlocked.blogspot.com/p/blog-page.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
