--- a/63new.html
+++ b/63new.html
@@ -1,1 +1,1 @@
-<iframe allowfullscreen src="https://freebie.games/games/sonic-the-hedgehog-3-knuckles/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://tees-pure.github.io/play/10-minutes-till-dawn.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
