--- a/60new.html
+++ b/60new.html
@@ -1,1 +1,1 @@
-<iframe allowfullscreen src="https://www.playroms.net/games/pokemon-roms/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://www.y9freegames.com/game/pokemon-ash-gray/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
