📊🍟 Checkpoint ./10new.html:60785523/245 ./11new.html:60785523/245 ./12new.html:60785523/244 ./13new.html:60785523/245 ./14new.html:60785523/245 ./15new.html:60785523/245 ./16new.html:60785523/245 ./17new.html:60785523/245 ./18new.html:60785523/245 ./19new.html:60785523/244 ./1new.html:60785523/244 ./20new.html:60785523/244 ./21new.html:60785523/245 ./22new.html:60785523/245 ./23new.html:60785523/245 ./24new.html:60785523/245 ./25new.html:60785523/245 ./26.html:60785523/245 ./27new.html:60785523/244 ./28new.html:60785523/245 ./2index.html:60785523/155 ./2new.html:60785523/246 ./30new.html:60785523/246 ./31new.html:60785523/246 ./32new.html:60785523/246 ./33new.html:60785523/246 ./34new.html:60785523/246 ./35new.html:60785523/246 ./36new.html:60785523/246 ./37new.html:60785523/246 ./38new.html:60785523/246 ./39new.html:60785523/246 ./3index.html:60785523/158 ./3new.html:60785523/245 ./40new.html:60785523/245 ./41new.html:60785523/245 ./42new.html:60785523/245 ./43new.html:60785523/245 ./44new.html:60785523/245 ./45new.html:60785523/245 ./46new.html:60785523/245 ./47new.html:60785523/158 ./48new.html:60785523/244 ./49new.html:60785523/245 ./4new.html:60785523/306 ./50new.html:60785523/245 ./51new.html:60785523/244 ./52new.html:60785523/244 ./53new.html:60785523/245 ./54new.html:60785523/245 ./55new.html:60785523/245 ./56new.html:60785523/158 ./57new.html:60785523/162 ./58new.html:60785523/158 ./59new.html:60785523/554 ./5new.html:60785523/244 ./60new.html:60785523/245 ./61new.html:60785523/245 ./62new.html:60785523/245 ./63new.html:60785523/245 ./64new.html:60785523/245 ./65new.html:60785523/245 ./66new.html:60785523/245 ./67new.html:60785523/245 ./68new.html:60785523/244 ./69new.html:60785523/244 ./6new.html:60785523/245 ./7new.html:60785523/245 ./8new.html:60785523/245 ./9new.html:60785523/245 ./index.html:60785523/2006

--- a/12new.html
+++ b/12new.html
@@ -13,4 +13,14 @@
          <a href="https://forms.gle/6LW9W5rYWEDAp2LG9" class="button" target="_blank" rel="noopener noreferrer">Private Link</a>
         <!-- Setting target="_blank" to open in a new tab -->
     </div>
+<!DOCTYPE html>
+<html>
+<head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9984437701096141"
+     crossorigin="anonymous"></script>
+<title>Page Title</title>
+</head>
+<body>
+  </body>
+</html>
 
