--- a/22new.html
+++ b/22new.html
@@ -6,3 +6,13 @@
 <button id="fullscreenButton" onclick="openFullscreen()">Open Fullscreen</button>
 
 }
+<!DOCTYPE html>
+<html>
+<head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9984437701096141"
+     crossorigin="anonymous"></script>
+<title>Page Title</title>
+</head>
+<body>
+  </body>
+</html>
