--- a/2index.html
+++ b/2index.html
@@ -3,6 +3,10 @@
 <html lang="en">
   <head>
 <link rel="stylesheet" href="style3.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9984437701096141"
+     crossorigin="anonymous"></script>
+
+
 
   </head> 
       <div class="navbar">
