--- a/index.html
+++ b/index.html
@@ -1,19 +1,42 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="index.css">
-  </head>
-  <body>
-    <button class="button1" onclick="openGame()"><img src="https://cdn.glitch.global/11f9dfc7-d7fd-4bac-80b7-da22c6e5b44e/Screenshot%202024-04-17%208.09.29%20AM.png?v=1713359420828" alt="CleverREBOOTED" width="100%" height="100%"></button>
-  <script>
-    function openGame() {
-    var win = window.open()
-    var url = "https://pertandingan.glitch.me/3index.html"
-    var iframe = win.document.createElement('iframe')
-    iframe.style.width = "100%";
-    iframe.style.height = "100%";
-    iframe.src = url
-    win.document.body.appendChild(iframe)
-    }
-  </script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9984437701096141"
+     crossorigin="anonymous"></script>
+
+
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HomePage</title>
+    <link rel="stylesheet" href="style2.css"> <!-- Link to your CSS file -->
+</head>
+  
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9984437701096141"
+     crossorigin="anonymous"></script>
+
+<body>
+      <script>
+        document.addEventListener("keydown", function(event) {
+            // Check if the pressed key is "S"
+            if (event.key === "S" || event.key === "s") {
+                // Redirects to 61new.html
+                window.location.href = '61new.html';
+            }
+        });
+    </script>
+
+    <div class="navbar">
+        <a href="2index.html" class="button">Games</a>
+        <a href="58new.html" class="button">Proxy</a>
+        <a href="https://classroom.google.com/" class="button">PANIC!</a>
+        <a href="57new.html" class="button">About</a>
+        <a href="12new.html" class="button">Feedback</a>
+        <a href="56new.html" class="button">Settings</a> <!-- Added the Settings button -->
+    </div>
+
+
+
+    
+</body>
 </html>
