--- a/36new.html
+++ b/36new.html
@@ -3,3 +3,14 @@
 </h1>
 
 <iframe allowfullscreen src="https://wordle-unlimited.github.io/play/masked-forces.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<!DOCTYPE html>
+<html>
+<head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9984437701096141"
+     crossorigin="anonymous"></script>
+<title>Page Title</title>
+</head>
+<body>
+  </body>
+</html>
+
