--- a/47new.html
+++ b/47new.html
@@ -2,6 +2,11 @@
   <!DOCTYPE html>
 <html>
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9984437701096141"
+     crossorigin="anonymous"></script>
+
+
+
 
     <title>Snake Game</title>
     <style>
