--- a/5new.html
+++ b/5new.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9984437701096141"
+     crossorigin="anonymous"></script>
+<title>Page Title</title>
+</head>
+<body>
+  </body>
+</html>
 
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
