🐣🕋 Checkpoint ./12new.html:60785523/143 ./58new.html:60785523/135

--- a/12new.html
+++ b/12new.html
@@ -11,6 +11,9 @@
         <p>Click one of the buttons below to go to one of the FeedBacks.</p>
         <a href="https://forms.gle/7p6T6uD71W33Q4xw5" class="button" target="_blank" rel="noopener noreferrer">Public Link</a>
          <a href="https://forms.gle/6LW9W5rYWEDAp2LG9" class="button" target="_blank" rel="noopener noreferrer">Private Link</a>
+  <h2>
+    Ive seen your feedback I hope you know I can not add Fortnite or BrawlStars Please add more detailed feedback
+  </h2>
         <!-- Setting target="_blank" to open in a new tab -->
     </div>
 <!DOCTYPE html>
