--- a/58new.html
+++ b/58new.html
@@ -25,6 +25,9 @@
         <a href="https://dog-functional-ant.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">Interstellar</a>
          <a href="https://saber-opalescent-galleon.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">InterStellar2</a>
         <!-- Setting target="_blank" to open in a new tab -->
+        <h2>
+    Ive seen your feedback I hope you know I can not add Fortnite or BrawlStars Please add more detailed feedback
+  </h2>
     </div>
 </body>
 </html>
