👴🍱 Checkpoint ./70new.html:60785523/1133

--- a/70new.html
+++ b/70new.html
@@ -20,17 +20,9 @@
         <a href="3index.html" class="button">HomePage</a> <!-- New HomePage button -->
     </div>
     <div class="content">
-        <h1>Proxy Page</h1>
-        <p>Click one of the buttons below to go to one of the Proxys .</p>
-        <a href="https://dog-functional-ant.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">Interstellar</a>
-         <a href="https://saber-opalescent-galleon.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">InterStellar2</a>
-      <a href="https://psychedelic-maze-mackerel.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">InterStellar3</a>
-      <a href="https://defiant-creative-lace.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">InterStellar4</a>
-      <a href="https://neon-spotted-twilight.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">InterStellar5</a>
-        <!-- Setting target="_blank" to open in a new tab -->
-        <h2>
-    Ive seen your feedback I hope you know I can not add Fortnite or BrawlStars Please add more detailed feedback
-  </h2>
+        <h1>NintendoGames</h1>
+        
+<iframe allowfullscreen src="https://cyan-selective-fig.glitch.me/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
     </div>
 </body>
 </html>
