🌕🏝 Checkpoint ./71new.html:60785523/642 ./58new.html:60785523/202

--- a/58new.html
+++ b/58new.html
@@ -22,6 +22,7 @@
     <div class="content">
         <h1>Proxy Page</h1>
         <p>Click one of the buttons below to go to one of the Proxys .</p>
+           <a href="71new.html" class="button" target="_blank" rel="noopener noreferrer">CroxyProxy</a>
         <a href="https://dog-functional-ant.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">Interstellar</a>
          <a href="https://saber-opalescent-galleon.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">InterStellar2</a>
       <a href="https://psychedelic-maze-mackerel.glitch.me/" class="button" target="_blank" rel="noopener noreferrer">InterStellar3</a>
