🌟🎗 Checkpoint ./71new.html:60785523/95 ./58new.html:60785523/422 ./3index.html:60785523/7

--- a/3index.html
+++ b/3index.html
@@ -24,7 +24,7 @@
 
     <div class="navbar">
         <a href="2index.html" class="button">Games</a>
-        <a href="58new.html" class="button">Proxy</a>
+        <a href="58new.html" class="button">Proxy(FIXED)</a>
         <a href="https://classroom.google.com/" class="button">PANIC!</a>
         <a href="57new.html" class="button">About</a>
         <a href="12new.html" class="button">Feedback</a>
