--- a/58new.html
+++ b/58new.html
@@ -8,7 +8,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proxy Page</title>
+    <title>Proxy Page(FIXED)</title>
     <link rel="stylesheet" href="style3.css"> <!-- Link to your CSS file -->
 </head>
 <body>
@@ -22,12 +22,12 @@
     <div class="content">
         <h1>Proxy Page</h1>
         <p>Click one of the buttons below to go to one of the Proxys .</p>
-           <a href="71new.html" class="button" target="_blank" rel="noopener noreferrer">CroxyProxy</a>
-        <a href="https://woolen-hospitable-glasses.glitch.me" class="button" target="_blank" rel="noopener noreferrer">Interstellar</a>
-         <a href="https://mixed-midi-muscle.glitch.me" class="button" target="_blank" rel="noopener noreferrer">InterStellar2</a>
-      <a href="https://mixed-midi-muscle.glitch.me" class="button" target="_blank" rel="noopener noreferrer">InterStellar3</a>
-      <a href="https://curvy-gentle-pump.glitch.me" class="button" target="_blank" rel="noopener noreferrer">InterStellar4</a>
-      <a href="https://honeysuckle-fate-zircon.glitch.me" class="button" target="_blank" rel="noopener noreferrer">InterStellar5</a>
+           <a href="71new.html" class="button" target="_blank" rel="noopener noreferrer">Interstellar</a>
+        <a href="71new.html" class="button" target="_blank" rel="noopener noreferrer">Interstellar</a>
+         <a href="71new.html" class="button" target="_blank" rel="noopener noreferrer">InterStellar2</a>
+      <a href="71new.html" class="button" target="_blank" rel="noopener noreferrer">InterStellar3</a>
+      <a href="71new.html" class="button" target="_blank" rel="noopener noreferrer">InterStellar4</a>
+      <a href="71new.html" class="button" target="_blank" rel="noopener noreferrer">InterStellar5</a>
         <!-- Setting target="_blank" to open in a new tab -->
         <h2>
     Ive seen your feedback I hope you know I can not add Fortnite or BrawlStars Please add more detailed feedback
