--- a/56new.html
+++ b/56new.html
@@ -23,9 +23,9 @@
     <div class="content">
         <h1>Settings Page</h1>
         <p>Click the button below to go to the regular link.</p>
-        <a href="https://pertandingan.glitch.me/3index.html" class="button" target="_blank" rel="noopener noreferrer">Regular Link</a>
+        <a href="https://pertandingan.netlify.app/" class="button" target="_blank" rel="noopener noreferrer">Regular Link</a>
         <p>Click the button below to go into about blank mode.</p>
-        <a href="https://leeward-quickest-cactus.glitch.me" class="button" target="_blank" rel="noopener noreferrer">About Blank</a>
+        <a href="https://pertandingan.netlify.app/" class="button" target="_blank" rel="noopener noreferrer">About Blank</a>
         <!-- Setting target="_blank" to open in a new tab -->
           <div class="container">
         <h1>Game Settings</h1>
