--- a/56new.html
+++ b/56new.html
@@ -31,7 +31,7 @@
         function openLinkInAboutBlank(url) {
             const newWindow = window.open('about:blank', '_blank');
             if (newWindow) {
-                newWindow.location.href = https://pertandingan.netlify.app/3index;
+                newWindow.location.href = url;
             } else {
                 alert('Pop-up blocked! Please allow pop-ups for this site.');
             }
