--- a/56new.html
+++ b/56new.html
@@ -25,7 +25,7 @@
         <p>Click the button below to go to the regular link.</p>
         <a href="https://pertandingan.netlify.app/" class="button" target="_blank" rel="noopener noreferrer">Regular Link</a>
              <p>Click the button below to go to a about blank tab.</p>
-   <button onclick="openLinkInAboutBlank('https://www.example.com')">Open Example.com in about:blank</button>
+   <button onclick="openLinkInAboutBlank('https://pertandingan.netlify.app/3index')">Open Example.com in about:blank</button>
 
     <script>
         function openLinkInAboutBlank(url) {
